# backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  gunicorn_config.py  pyproject.toml
alembic/: env.py
app/: .env.example  main.py
app/api/: __init__.py
app/api/api_v1/: __init__.py  users.py
app/core/: config.py
app/core/models/: base.py  db_helper.py  user.py
app/core/schemas/: user.py
app/crud/: users.py
nginx/: default.conf
scripts/: entrypoint.sh  run_migrations.sh
src/: main.py
src/core/: config.py
src/core/security/: rbac.py  scopes.py  send_email.py  token.py  utils.py
src/core/utils/: helpers.py
src/db/: db_helper.py  dependencies.py  unit_of_work.py
src/db/choices/: __init__.py  application.py  base.py  event.py  project.py
src/db/migrations/: env.py
src/db/models/: __init__.py  application.py  base.py  city.py  event.py  library.py  mixins.py  organization.py  portfolio_item.py  profile.py  project.py  project_vacancy.py  project_vacancy_skill.py  rbac.py  refresh_session.py  skill.py  team_member.py  university.py  user.py
src/db/repository/: application.py  base.py  city.py  project.py  project_vacancy.py  refresh_session.py  role.py  skill.py  team_role.py  university.py  user.py  user_profile.py
src/service/: dependencies.py  filters.py  helpers.py
src/service/application/: schema.py  service.py
src/service/auth/: schema.py  service.py
src/web/: application.py  lifespan.py  middleware.py
templates/emails/: password_reset.html.j2  verify_email.html.j2
(+50 files in other folders)
